# INFT2503

solution1/: CMakeLists.txt  exercise1  exercise1.cpp  readTemp.txt  read_temperatures  read_temperatures.cpp
solution2/: CMakeLists.txt  exercise_1a  exercise_1a.cpp  exercise_1b  exercise_1b.cpp  exercise_4  exercise_4.cpp  exercise_5  exercise_5.cpp  exercise_6  exercise_6.cpp
solution3/: CMakeLists.txt  Circle.h  Commodity.cpp  exercise1.cpp  exercise2.cpp  exercise4.cpp  testKlient.cpp
solution4/: CMakeLists.txt  exercise1.cpp  exercise2.cpp
solution6/: CMakeLists.txt  exercise1.cpp  exercise2.cpp
solution7/: CMakeLists.txt  fraction.cpp  fraction.hpp  main.cpp
solution7_2/: CMakeLists.txt  main.cpp  set.cpp  set.hpp
solution8/: CMakeLists.txt  exercise1.cpp  exercise2.cpp
