cmake_minimum_required(VERSION 3.5)

project(Solution2)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)

add_executable(exercise_1a exercise_1a.cpp)
add_executable(exercise_1b exercise_1b.cpp)
add_executable(exercise_4 exercise_4.cpp)
add_executable(exercise_5 exercise_5.cpp)
add_executable(exercise_6 exercise_6.cpp)
